# DR-RL

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/grpo/: default.yaml
configs/reward/: default.yaml
configs/run/: default.yaml
configs/sim/: default.yaml
configs/tolerances/: default.yaml
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  MANIPULATION_CHECK.md  PHASE5_RESULTS.md
docs/adr/: 0001-ode-backend.md  0002-rl-library.md  0003-distinguishability-statistic.md
experiments/: __init__.py  grpo_mve.py  prm_shift.py  smoke.py
src/drrl/: __init__.py
src/drrl/bench/: __init__.py
src/drrl/bench/tasks/: __init__.py
src/drrl/data/: __init__.py
src/drrl/data/real/: __init__.py
src/drrl/data/synth/: __init__.py  library.py
src/drrl/env/: __init__.py  actions.py  environment.py  state.py
src/drrl/policy/: __init__.py  base.py
src/drrl/reward/: __init__.py  breakdown.py  compose.py  context.py
src/drrl/rl/: __init__.py  decision.py  edit_search.py  evaluate.py  grpo.py  prm.py  reject.py  sft.py  tasks.py
src/drrl/sim/: __init__.py  backend.py  diffrax_backend.py  fitting.py  result.py  scipy_backend.py
src/drrl/spec/: __init__.py  canonical.py  model.py  units.py
src/drrl/utils/: __init__.py  config.py  logging.py  manifest.py  seed.py  tracking.py
src/drrl/verifier/: __init__.py  competitors.py  distinguish.py  execution.py  identify.py  oed.py  pipeline.py  pkpd.py  plausibility.py  report.py  schema.py  units.py
tests/: __init__.py  conftest.py  factories.py  test_smoke_entrypoint.py
tests/data/: __init__.py  test_synth.py  test_tmdd.py
tests/env/: __init__.py  test_environment.py  test_state.py
tests/policy/: __init__.py  test_policies.py
tests/reward/: __init__.py  test_adversarial.py  test_compose.py
tests/rl/: __init__.py  test_grpo_reward.py  test_prm_search.py  test_warmstart.py
tests/sim/: __init__.py  test_closed_form.py  test_fitting.py  test_sensitivities.py
tests/spec/: __init__.py  test_canonical.py  test_model.py  test_units.py
tests/utils/: __init__.py  test_config.py  test_logging_tracking.py  test_manifest.py  test_seed.py  test_seed_backends.py  test_tracking_wandb.py
tests/verifier/: __init__.py  test_competitors.py  test_distinguish.py  test_edge_cases.py  test_identify.py  test_oed.py  test_pkpd.py  test_plausibility.py  test_schema_execution.py  test_units.py
