[project]
name = "drrl"
version = "0.0.1"
description = "Distinguishability-Relative Reinforcement Learning for mechanistic PK/PD model generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DR-RL authors" }]

# Base dependencies: the pure-science + config core. Heavy ODE/RL/LLM stacks
# live in optional extras so the default lockfile and CI stay fast. Each extra
# is pulled in by the phase that first needs it (see ASSUMPTIONS.md).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pint>=0.23",
    "sympy>=1.12",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
]

[project.optional-dependencies]
# Phase 1: ODE integration + forward sensitivities (JAX/diffrax primary backend).
sim = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "diffrax>=0.5",
    "equinox>=0.11",
]
# Phase 5+: LLM policy + GRPO training. Turing (sm_75) => fp16 + 4-bit QLoRA
# (no bf16 / FlashAttention-2).
rl = [
    "torch>=2.5,<2.7",  # CUDA 12.4 wheels (Turing sm_75; driver 550 has no cu13)
    "transformers>=4.44",
    "trl>=0.12",
    "peft>=0.12",
    "datasets>=2.18",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
]
# Optional experiment tracking (no-op fallback used when absent).
track = [
    "wandb>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Pin torch (and its CUDA deps) to the CUDA 12.4 wheel index. The host driver is
# 550.90 (CUDA 12.4 max); the default PyPI torch now ships cu13 wheels that need
# driver >= 580 and would fail at runtime on this Turing card.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.hatch.build.targets.wheel]
packages = ["src/drrl"]

# ----------------------------------------------------------------------------
# ruff: lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes + pycodestyle
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "C4",                # comprehensions
    "SIM",               # simplify
    "RUF",               # ruff-specific
    "D",                 # pydocstyle
    "ANN",               # type annotations
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN401", # allow typing.Any where deliberately needed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]      # tests need no docstrings/annotations
"experiments/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------------------------------------------------------------
# mypy: strict
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party libs without type stubs, or optional extras not always installed.
module = [
    "diffrax.*",
    "equinox.*",
    "jax.*",
    "jaxlib.*",
    "torch.*",
    "transformers.*",
    "trl.*",
    "peft.*",
    "datasets.*",
    "wandb.*",
    "pint.*",
    "sympy.*",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Thin training bridge to third-party ML libs (trl/transformers/peft/bitsandbytes),
# whose public typing is inconsistent across versions. The science layer stays
# strict; these two modules only wire those libraries together.
module = ["drrl.rl.grpo", "drrl.rl.evaluate"]
disable_error_code = ["no-untyped-call", "attr-defined", "arg-type"]

[[tool.mypy.overrides]]
# Tests: invariant assertions are the point; full annotations are noise here.
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# ----------------------------------------------------------------------------
# pytest + coverage
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (excluded from the fast unit suite)",
    "gpu: requires a GPU (excluded from CI default suite)",
    "integration: heavy end-to-end training/integration tests",
]

[tool.coverage.run]
branch = true
source = ["drrl"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
